------------------------------------------------------------------------
r2456 | gaser | 2023-08-21 09:28:54

Changed paths:
 M CHANGES.txt
 M cat_batch_cat.sh

Fixed: Corrected handling of processors and files wirh empty spaces in name in 
       cat_batch_cat.sh.
------------------------------------------------------------------------
r2455 | gaser | 2023-08-18 18:37:17

Changed paths:
 M CHANGES.txt
 M cat_main1639.m
 M cat_plot_scatter.m
 M cat_vol_pbt.m
 M cat_vol_pbtp.c

Changed: Updated help text.
Changed: Added rng-init for jittered scatter plot to cat_plot_scatter.m.
------------------------------------------------------------------------
r2454 | rdahnke | 2023-08-09 12:14:31

Changed paths:
 M .gitignore
 M CHANGES.txt
 M cat_surf_render2.m
 M spm_cat12.m

1) Fixed:    Corrected poster background bugs in Octave. ------------------------------------------------------------------------
r2452 | gaser | 2023-08-08 11:05:49

Changed paths:
 M CHANGES.txt
A  mexmaca/@file_array/private/file2mat.mex
A  mexmaca/@file_array/private/init.mex
A  mexmaca/@file_array/private/mat2file.mex
A  mexmaca/@gifti/private/zstream.mex
A  mexmaca/@xmltree/private/xml_findstr.mex
A  mexmaca/spm_add.mex
A  mexmaca/spm_brainwarp.mex
A  mexmaca/spm_bsplinc.mex
A  mexmaca/spm_bsplins.mex
A  mexmaca/spm_bwlabel.mex
A  mexmaca/spm_cat.mex
A  mexmaca/spm_conv_vol.mex
A  mexmaca/spm_diffeo.mex
A  mexmaca/spm_dilate_erode.mex
A  mexmaca/spm_existfile.mex
A  mexmaca/spm_field.mex
A  mexmaca/spm_gamrnd.mex
A  mexmaca/spm_get_lm.mex
A  mexmaca/spm_global.mex
A  mexmaca/spm_gmmlib.mex
A  mexmaca/spm_hist.mex
A  mexmaca/spm_hist2.mex
A  mexmaca/spm_jsonread.mex
A  mexmaca/spm_krutil.mex
A  mexmaca/spm_mesh_geodesic.mex
A  mexmaca/spm_mesh_reduce.mex
A  mexmaca/spm_mesh_utils.mex
A  mexmaca/spm_mrf.mex
A  mexmaca/spm_project.mex
A  mexmaca/spm_render_vol.mex
A  mexmaca/spm_resels_vol.mex
A  mexmaca/spm_sample_vol.mex
A  mexmaca/spm_slice_vol.mex
A  mexmaca/spm_unlink.mex